--- a/page3.html
+++ b/page3.html
@@ -40,12 +40,12 @@
 <body>
     <div class="container">
         <h1>EEE Notes</h1>
-        <a href="C:\Users\Lenovo\Desktop\Website\C1.pdf" class="note" target="_blank">DC & AC Fundamentals</a>
-        <a href="C:\Users\Lenovo\Desktop\Website\C2.pdf" class="note" target="_blank">DC Machines & Transformers</a>
-        <a href="C:\Users\Lenovo\Desktop\Website\C3.pdf" class="note" target="_blank">Semiconductor Physics</a>
-	<a href="C:\Users\Lenovo\Desktop\Website\Mesh Analysis.pdf" class="note" target="_blank">Mesh Analysis</a>
-	<a href="C:\Users\Lenovo\Desktop\Website\Nodal Analysis.pdf" class="note" target="_blank">Nodal Analysis</a>
-	<a href="C:\Users\Lenovo\Desktop\Website\Poblems on AC Circuits.pdf" class="note" target="_blank">Problems on AC Circuits</a>
+        <a href="C1.pdf" class="note" target="_blank">DC & AC Fundamentals</a>
+        <a href="C2.pdf" class="note" target="_blank">DC Machines & Transformers</a>
+        <a href="C3.pdf" class="note" target="_blank">Semiconductor Physics</a>
+	<a href="Mesh Analysis.pdf" class="note" target="_blank">Mesh Analysis</a>
+	<a href="Nodal Analysis.pdf" class="note" target="_blank">Nodal Analysis</a>
+	<a href="Poblems on AC Circuits.pdf" class="note" target="_blank">Problems on AC Circuits</a>
 	<a href="C:\Users\Lenovo\Desktop\Website\TutorialProblems Mesh Node.pdf" class="note" target="_blank">Tutorial Problems Mesh Node</a>
 	
     </div>
