--- a/page3.html
+++ b/page3.html
@@ -46,7 +46,7 @@
 	<a href="Mesh Analysis.pdf" class="note" target="_blank">Mesh Analysis</a>
 	<a href="Nodal Analysis.pdf" class="note" target="_blank">Nodal Analysis</a>
 	<a href="Poblems on AC Circuits.pdf" class="note" target="_blank">Problems on AC Circuits</a>
-	<a href="C:\Users\Lenovo\Desktop\Website\TutorialProblems Mesh Node.pdf" class="note" target="_blank">Tutorial Problems Mesh Node</a>
+	<a href="TutorialProblems Mesh Node.pdf" class="note" target="_blank">Tutorial Problems Mesh Node</a>
 	
     </div>
 </body>
