--- a/page4.html
+++ b/page4.html
@@ -40,14 +40,14 @@
 <body>
     <div class="container">
         <h1>Physics Notes</h1>
-        <a href="C:\Users\Lenovo\Desktop\Website\5. LASER Lecture Notes.pdf" class="note" target="_blank">Laser Notes</a>
-        <a href="C:\Users\Lenovo\Desktop\Website\Elasticity 21-3-24.pdf" class="note" target="_blank">Elasticity Notes</a>
-        <a href="C:\Users\Lenovo\Desktop\Website\Elasticity Problems.pdf" class="note" target="_blank">Elasticity Problems</a>
-	<a href="C:\Users\Lenovo\Desktop\Website\Laser ppt final.pptx" class="note" target="_blank">Lasers PPT</a>
-	<a href="C:\Users\Lenovo\Desktop\Website\Modern Physics.pdf" class="note" target="_blank">Modern Physics Notes</a>
-	<a href="C:\Users\Lenovo\Desktop\Website\Optical Fibre.pdf" class="note" target="_blank">Optical Fibre Notes</a>
-	<a href="C:\Users\Lenovo\Desktop\Website\Quantum Theory of Radiation notes.pdf" class="note" target="_blank">Quantum Theory of Radiation Notes</a>
-	<a href="C:\Users\Lenovo\Desktop\Website\QM-study-material.pdf" class="note" target="_blank">QM-study-material</a>
+        <a href="5. LASER Lecture Notes.pdf" class="note" target="_blank">Laser Notes</a>
+        <a href="Elasticity 21-3-24.pdf" class="note" target="_blank">Elasticity Notes</a>
+        <a href="Elasticity Problems.pdf" class="note" target="_blank">Elasticity Problems</a>
+	<a href="Laser ppt final.pptx" class="note" target="_blank">Lasers PPT</a>
+	<a href="Modern Physics.pdf" class="note" target="_blank">Modern Physics Notes</a>
+	<a href="Optical Fibre.pdf" class="note" target="_blank">Optical Fibre Notes</a>
+	<a href="Quantum Theory of Radiation notes.pdf" class="note" target="_blank">Quantum Theory of Radiation Notes</a>
+	<a href="QM-study-material.pdf" class="note" target="_blank">QM-study-material</a>
 	
     </div>
 </body>
