--- a/page5.html
+++ b/page5.html
@@ -40,10 +40,10 @@
 <body>
     <div class="container">
         <h1>Math Tutorials</h1>
-        <a href="C:\Users\Lenovo\Desktop\Website\MTF111A_Tut-1.docx" class="note" target="_blank">1</a>
-        <a href="C:\Users\Lenovo\Desktop\Website\Tutorial-2.docx" class="note" target="_blank">2</a>
-        <a href="C:\Users\Lenovo\Desktop\Website\Tutorial-3.docx"" class="note" target="_blank">3</a>
-	<a href="C:\Users\Lenovo\Desktop\Website\Tutorial-5_updated.docx" class="note" target="_blank">5</a>
+        <a href="MTF111A_Tut-1.docx" class="note" target="_blank">1</a>
+        <a href="Tutorial-2.docx" class="note" target="_blank">2</a>
+        <a href="Tutorial-3.docx"" class="note" target="_blank">3</a>
+	<a href="Tutorial-5_updated.docx" class="note" target="_blank">5</a>
 	
     </div>
 </body>
