added the missing files in cse

--- a/page6.html
+++ b/page6.html
@@ -50,9 +50,9 @@
 	<a href="08_Strings.pptx" class="note" target="_blank">Strings</a>
 	<a href="09_Functions.pptx" class="note" target="_blank">Functions</a>
 	<a href="10_Recursion.pptx" class="note" target="_blank">Recursion</a>
-	<a href="11_Pointers" class="note" target="_blank">Pointers</a>
-	<a href="12_Pointers and Arrays" class="note" target="_blank">Pointers and Arrays</a>
-	<a href="14_Files" class="note" target="_blank">Files</a>
+	<a href="11_Pointers.pptx" class="note" target="_blank">Pointers</a>
+	<a href="12_Pointers and Arrays.pptx" class="note" target="_blank">Pointers and Arrays</a>
+	<a href="14_Files.pptx" class="note" target="_blank">Files</a>
     </div>
 </body>
 </html>
