--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="container">
         <h1>Hey Champs! Welcome to ResourceHub</h1>
         <button class="button" onclick="window.location.href='page2.html'">View Notes</button>
+        <h3>@jagadish</h3>
     </div>
 </body>
 </html>
