--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hey Champs! Welcome to ResourceHub</h1>
+        <h1>Hey RUAS'ians! Welcome to ResourceHub</h1>
         <button class="button" onclick="window.location.href='page2.html'">View Notes</button>
         <h3>@jagadish</h3>
     </div>
