--- a/page5.html
+++ b/page5.html
@@ -45,6 +45,7 @@
         <a href="Tutorial-3.docx"" class="note" target="_blank">3</a>
 	    <a href="Tutorial-5_updated.docx" class="note" target="_blank">5</a>
         <a href="MTF111A_Tutorial-11.pdf" class="note" target="_blank">11</a>
+        <a href="SEE_Q_Paper.pdf" class="note" target="_blank">SEE Model Paper</a>
     </div>
 </body>
 </html>
