--- a/page5.html
+++ b/page5.html
@@ -42,7 +42,7 @@
         <h1>Math Tutorials & Materials</h1>
         <a href="MTF111A_Tut-1.docx" class="note" target="_blank">1</a>
         <a href="Tutorial-2.docx" class="note" target="_blank">2</a>
-        <a href="Tutorial-3.docx"" class="note" target="_blank">3</a>
+        <a href="Tutorial-3.docx" class="note" target="_blank">3</a>
 	    <a href="Tutorial-5_updated.docx" class="note" target="_blank">5</a>
         <a href="MTF111A_Tutorial-11.pdf" class="note" target="_blank">11</a>
         <a href="SEE_Q_Paper.pdf" class="note" target="_blank">SEE Model Paper</a>
